syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.product";
option java_outer_classname = "ProductProto";

package product;

// The Price computation service definition.
service PriceCalculator {
  rpc CalculateTotal (ProductRequest) returns (ProductReply) {}
}

message ProductRequest {
  repeated Product products = 1;
}

message Product {
  string name = 1;
  float price = 2;
}

message ProductReply {
  float total = 1;
}
